# mailing_manager2

./: .env.sample  README.md  groups.json  mailing.json  pyproject.toml
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_alter_client_commentary_alter_client_email_and_more.py  0003_alter_mailing_next_date_alter_mailing_start_date.py  0004_client_owner_mailing_owner_message_owner_and_more.py  0005_alter_mailing_options.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  logs_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
static/js/: jquery-3.2.1.slim.min.js
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: logout.html  register.html  user_list.html
