[tool.poetry]
name = "mailing-manager2"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
django-apscheduler = "^0.7.0"
pytz = "^2024.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
